--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,21 @@
 spring.profiles.include=oauth
+scope=profile,email
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.session.store-type=jdbc
+# registration naver
+spring.security.oauth2.client.registration.naver.client-id=bMXuxkbDEloSUK7ZaGdW
+spring.security.oauth2.client.registration.naver.client-secret=qdVD1rfKBz
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization_grant_type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization_uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token_uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user_name_attribute=response
+
+
