--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.session:spring-session-jdbc' // 추가
+    implementation 'org.springframework.session:spring-session-jdbc'
+    implementation 'org.springframework.security:spring-security-test' // 임의로 인증된 사용자
 }
 
 test {
